--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "mongoose": "^7.5.0",
+    "bcryptjs": "^2.4.3",
+    "nodemailer": "^6.9.4",
+    "validator": "^13.9.0"
   }
 }
